--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+        <link href="assets/css/bootstrap.min.css" rel="stylesheet">
         <!-- Include roboto.css to use the Roboto web font, material.css to include the theme and ripples.css to style the ripple effect -->
         <link href="assets/css/roboto.min.css" rel="stylesheet">
         <link href="assets/css/material.min.css" rel="stylesheet">
@@ -10,8 +10,8 @@
     </head>
     <body>
         <div id="mount"></div>
-        <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+        <script src="assets/scripts/jquery-1.10.2.min.js"></script>
+        <script src="assets/scripts/bootstrap.min.js"></script>
         <script src="assets/scripts/jquery.nouislider.all.js"></script>
         <script src="assets/scripts/ripples.min.js"></script>
         <script src="assets/scripts/material.min.js"></script>
