Find my Suburb page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,11 +5,14 @@
         <link href="assets/css/roboto.min.css" rel="stylesheet">
         <link href="assets/css/material.min.css" rel="stylesheet">
         <link href="assets/css/ripples.min.css" rel="stylesheet">
+        <link href="assets/css/jquery.nouislider.pips.min.css" ref="stylesheet">
+        <link href="assets/css/jquery.nouislider.min.css" ref="stylesheet">
     </head>
     <body>
         <div id="mount"></div>
-        <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+        <script src="assets/scripts/jquery.nouislider.all.js"></script>
         <script src="assets/scripts/ripples.min.js"></script>
         <script src="assets/scripts/material.min.js"></script>
         <script src="assets/bundle.js"></script>
