Add example graphs built with Chartist

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
         <link href="assets/css/ripples.min.css" rel="stylesheet">
         <link href="assets/css/jquery.nouislider.pips.min.css" ref="stylesheet">
         <link href="assets/css/jquery.nouislider.min.css" ref="stylesheet">
+        <link rel="stylesheet" type="text/css" href="assets/css/chartist.min.css">
     </head>
     <body>
         <div id="mount"></div>
